# SPDX-FileCopyrightText: 2023 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.70.0"
homepage = "https://sorairolake.github.io/abcrypt/"
repository = "https://github.com/sorairolake/abcrypt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
anyhow = "1.0.77"
clap = { version = "4.4.11", features = ["derive"] }
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }

[profile.release.package.abcrypt-cli]
codegen-units = 1
# The `lto` setting cannot be specified yet, see https://github.com/rust-lang/cargo/issues/9330
# lto = true
# The `panic` setting cannot be specified yet, see https://github.com/rust-lang/cargo/issues/9330
# panic = "abort"
strip = true
