# SPDX-FileCopyrightText: 2023 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2024"
rust-version = "1.85.0"
homepage = "https://sorairolake.github.io/abcrypt/"
repository = "https://github.com/sorairolake/abcrypt"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
dialoguer = { version = "0.11.0", default-features = false, features = ["password"] }

[workspace.lints.clippy]
cargo = "warn"
nursery = "warn"
pedantic = "warn"

[workspace.lints.rust]
missing_debug_implementations = "deny"
rust_2018_idioms = { level = "warn", priority = -1 }

[profile.release.package.abcrypt-cli]
codegen-units = 1
# The `lto` setting cannot be specified yet, see https://github.com/rust-lang/cargo/issues/9330
# lto = true
# The `panic` setting cannot be specified yet, see https://github.com/rust-lang/cargo/issues/9330
# panic = "abort"
strip = true
