# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "abcrypt"
version = "0.1.0"
authors = ["Shun Sakai <sorairolake@protonmail.ch>"]
edition = "2021"
rust-version = "1.60.0"
description = "An implementation of the abcrypt encrypted data format"
documentation = "https://docs.rs/abcrypt"
readme = "README.md"
repository = "https://github.com/sorairolake/abcrypt"
license = "Apache-2.0 OR MIT"
keywords = ["abcrypt", "crypto"]
categories = ["cryptography", "no-std"]
exclude = [
  "/.bumpversion.cfg",
  "/.bumpversion.cfg.license",
  "/.github",
  "/benches",
  "/clippy.toml",
  "/examples",
  "/justfile",
  "/rustfmt.toml",
  "/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.3"
argon2 = { version = "0.5.1", default-features = false, features = ["alloc"] }
blake2 = { version = "0.10.6", default-features = false }
chacha20poly1305 = "0.10.1"
ctr = "0.9.2"
hmac = "0.12.1"
rand = { version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"] }
scrypt = { version = "0.11.0", default-features = false }
sha2 = { version = "0.10.7", default-features = false }

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "3.2.25", features = ["derive"] }
dialoguer = { version = "0.10.4", default-features = false, features = ["password"] }

[features]
default = ["std"]
std = ["hmac/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
