# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "abcrypt"
version = "0.2.0"
authors.workspace = true
edition = "2021"
rust-version = "1.65.0"
description = "An implementation of the abcrypt encrypted data format"
documentation = "https://docs.rs/abcrypt"
readme = "README.md"
repository.workspace = true
license = "Apache-2.0 OR MIT"
keywords = ["abcrypt", "crypto"]
categories = ["cryptography", "no-std"]
exclude = [
  "/benches",
  "/clippy.toml",
  "/examples",
  "/rustfmt.toml",
  "/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = { version = "0.5.1", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"] }

[dev-dependencies]
anyhow = "1.0.75"
clap = { version = "4.3.24", features = ["derive"] }
dialoguer = { version = "0.10.4", default-features = false, features = ["password"] }

[features]
default = ["std"]
alloc = ["argon2/alloc"]
std = ["alloc", "argon2/std", "blake2/std", "chacha20poly1305/std"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
