# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "abcrypt-cli"
version = "0.2.2"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An utility for encrypt and decrypt files"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later"
keywords = ["abcrypt"]
categories = ["command-line-utilities"]
exclude = [
  "/doc",
  "/tests",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "abcrypt"
path = "src/main.rs"

[dependencies]
abcrypt = { version = "0.2.3", path = "../abcrypt" }
anyhow.workspace = true
byte-unit = { version = "4.0.19", default-features = false, features = ["std"] }
clap = { workspace = true, features = ["wrap_help"] }
clap_complete = "4.4.3"
clap_complete_nushell = "4.3.2"
dialoguer.workspace = true
serde = { version = "1.0.188", features = ["derive"], optional = true }
serde_json = { version = "1.0.107", optional = true }
sysexits = "0.7.2"

[dev-dependencies]
assert_cmd = "2.0.11"
predicates = "3.0.3"

[features]
default = ["json"]
json = ["dep:serde", "dep:serde_json"]
