# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "abcrypt"
version = "0.3.7"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An implementation of the abcrypt encrypted data format"
documentation = "https://docs.rs/abcrypt"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0 OR MIT"
keywords = ["abcrypt", "crypto"]
categories = ["cryptography", "no-std"]
include = ["/LICENSES", "/README.md", "/src"]

[package.metadata.docs.rs]
all-features = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "decrypt"
path = "examples/decrypt.rs"
required-features = ["std"]

[[example]]
name = "encrypt"
path = "examples/encrypt.rs"
required-features = ["std"]

[[example]]
name = "info"
path = "examples/info.rs"
required-features = ["std", "serde"]

[dependencies]
argon2 = { version = "0.5.3", default-features = false }
blake2 = { version = "0.10.6", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["getrandom"] }
rand = { version = "0.8.5", default-features = false, features = ["getrandom", "std_rng"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
anyhow.workspace = true
clap.workspace = true
dialoguer.workspace = true
serde_json = "1.0.132"
serde_test = "1.0.177"

[features]
default = ["std"]
alloc = ["argon2/alloc"]
std = ["alloc", "argon2/std", "blake2/std", "chacha20poly1305/std"]
serde = ["dep:serde"]

[lints]
workspace = true
