# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "abcrypt-capi"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "C API for abcrypt"
documentation = "https://docs.rs/abcrypt-capi"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0 OR MIT"
keywords = ["abcrypt", "crypto"]
categories = ["cryptography"]
include = ["/LICENSES", "/README.md", "/src"]

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
abcrypt = { version = "0.4.0", path = "../abcrypt" }

[build-dependencies]
cbindgen = { version = "0.29.0", default-features = false }

[lints]
workspace = true
