# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: GPL-3.0-or-later

[package]
name = "abcrypt-cli"
version = "0.5.1"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "An utility for encrypt and decrypt files"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "GPL-3.0-or-later"
keywords = ["abcrypt"]
categories = ["command-line-utilities"]
include = ["/LICENSES", "/README.md", "/src"]

[[bin]]
name = "abcrypt"
path = "src/main.rs"

[dependencies]
abcrypt = { version = "0.5.0", path = "../abcrypt", features = ["serde"] }
anyhow.workspace = true
byte-unit = "5.1.6"
clap = { workspace = true, features = ["wrap_help"] }
clap_complete = "4.5.55"
clap_complete_nushell = "4.5.8"
dialoguer.workspace = true
serde_json = { version = "1.0.141", optional = true }
sysexits = "0.9.1"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"

[features]
default = ["json"]
json = ["dep:serde_json"]

[lints]
workspace = true
