# SPDX-FileCopyrightText: 2024 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "abcrypt-py"
requires-python = ">=3.8"
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Programming Language :: Rust",
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest>=6.2.4"]
dev = ["mypy>=0.900", "ruff>=0.1.3"]

[project.urls]
Documentation = "https://sorairolake.github.io/abcrypt/book/python/index.html"
Repository = "https://github.com/sorairolake/abcrypt"
Issues = "https://github.com/sorairolake/abcrypt/issues"
Changelog = "https://github.com/sorairolake/abcrypt/blob/develop/crates/python/CHANGELOG.adoc"

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
ignore = [
  "E501",
  "D100",
  "D103",
  "D203",
  "D212",
  "ANN101",
  "S101",
  "COM812",
  "ISC001",
  "INP001",
  "T201",
  "PT011",
  "PLR2004",
]
select = ["ALL"]
