# SPDX-FileCopyrightText: 2022 Shun Sakai
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "abcrypt-wasm"
version = "0.4.0"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Wasm bindings for abcrypt"
documentation = "https://docs.rs/abcrypt-wasm"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license = "Apache-2.0 OR MIT"
keywords = ["abcrypt", "crypto"]
categories = ["cryptography", "wasm"]
include = ["/LICENSES", "/README.md", "/src"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
abcrypt = { version = "0.4.0", path = "../abcrypt" }
getrandom = { version = "0.2.15", features = ["js"] }
wasm-bindgen = "0.2.100"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[lints]
workspace = true
